compiler/lume_hir/src/snapshots/lume_hir__lower__tests__class_snapshots@pub_property.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower(r#\"\n                class Foo {\n                    pub let x: Int32 = 1;\n                }\"#)"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        18213876290066861800: Type(
            Class(
                ClassDefinition {
                    id: 18213876290066861800,
                    type_id: None,
                    name: 'Foo',
                    builtin: false,
                    members: [
                        Property(
                            Property {
                                prop_id: None,
                                visibility: Public,
                                name: Identifier {
                                    name: "x",
                                    location: <internal>:57:58,
                                },
                                property_type: Type {
                                    name: 'std.Int32',
                                    type_params: [],
                                    location: <internal>:60:65,
                                },
                                default_value: Some(
                                    Expression {
                                        id: 0,
                                        location: <internal>:68:69,
                                        kind: Literal(
                                            Literal {
                                                id: 0,
                                                location: <internal>:68:69,
                                                kind: Int(
                                                    IntLiteral {
                                                        id: 0,
                                                        value: 1,
                                                        kind: I32,
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ),
                                location: <internal>:53:70,
                            },
                        ),
                    ],
                    type_parameters: [],
                    location: <internal>:17:88,
                },
            ),
        ),
    },
    statements: {},
    expressions: {
        0: Expression {
            id: 0,
            location: <internal>:68:69,
            kind: Literal(
                Literal {
                    id: 0,
                    location: <internal>:68:69,
                    kind: Int(
                        IntLiteral {
                            id: 0,
                            value: 1,
                            kind: I32,
                        },
                    ),
                },
            ),
        },
    },
}
