compiler/lume_hir/src/snapshots/lume_hir__lower__tests__conditional_snapshots@if_else_if_else_empty.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower_expr(\"if true { } else if false { } else { }\")"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        8195533856448846917: Function(
            FunctionDefinition {
                id: 8195533856448846917,
                func_id: None,
                visibility: Private,
                name: 'foo',
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        name: 'void',
                        type_params: [],
                        location: <internal>:12:16,
                    },
                ),
                block: Block {
                    statements: [
                        Statement {
                            id: 0,
                            kind: If(
                                If {
                                    id: 0,
                                    cases: [],
                                    location: <internal>:19:57,
                                },
                            ),
                            location: <internal>:19:57,
                        },
                    ],
                    location: <internal>:17:59,
                },
                location: <internal>:0:59,
            },
        ),
    },
    statements: {
        0: Statement {
            id: 0,
            kind: If(
                If {
                    id: 0,
                    cases: [],
                    location: <internal>:19:57,
                },
            ),
            location: <internal>:19:57,
        },
    },
    expressions: {},
}
