compiler/lume_hir/src/snapshots/lume_hir__lower__tests__conditional_snapshots@if_empty.snap
---
source: compiler/lume_hir/src/lower.rs
description: "if true { }"
---
[
    Statement {
        id: 0,
        kind: If(
            If {
                id: 0,
                cases: [],
                location: <internal>:0:11,
            },
        ),
        location: <internal>:0:11,
    },
]
