compiler/lume_hir/src/snapshots/lume_hir__lower__tests__conditional_snapshots@inequality_empty.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower_expr(\"let a = 0; if a != 1 { }\")"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        8195533856448846917: Function(
            FunctionDefinition {
                id: 8195533856448846917,
                func_id: None,
                visibility: Private,
                name: 'foo',
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        name: 'void',
                        type_params: [],
                        location: <internal>:12:16,
                    },
                ),
                block: Block {
                    statements: [
                        Statement {
                            id: 0,
                            kind: Variable(
                                VariableDeclaration {
                                    id: 0,
                                    name: Identifier {
                                        name: "a",
                                        location: <internal>:23:24,
                                    },
                                    declared_type: None,
                                    value: Expression {
                                        id: 5871781006564002453,
                                        location: <internal>:27:28,
                                        kind: Literal(
                                            Literal {
                                                id: 5871781006564002453,
                                                location: <internal>:27:28,
                                                kind: Int(
                                                    IntLiteral {
                                                        id: 5871781006564002453,
                                                        value: 0,
                                                        kind: I32,
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                },
                            ),
                            location: <internal>:19:29,
                        },
                        Statement {
                            id: 11743562013128004906,
                            kind: If(
                                If {
                                    id: 11743562013128004906,
                                    cases: [],
                                    location: <internal>:30:43,
                                },
                            ),
                            location: <internal>:30:43,
                        },
                    ],
                    location: <internal>:17:45,
                },
                location: <internal>:0:45,
            },
        ),
    },
    statements: {
        0: Statement {
            id: 0,
            kind: Variable(
                VariableDeclaration {
                    id: 0,
                    name: Identifier {
                        name: "a",
                        location: <internal>:23:24,
                    },
                    declared_type: None,
                    value: Expression {
                        id: 5871781006564002453,
                        location: <internal>:27:28,
                        kind: Literal(
                            Literal {
                                id: 5871781006564002453,
                                location: <internal>:27:28,
                                kind: Int(
                                    IntLiteral {
                                        id: 5871781006564002453,
                                        value: 0,
                                        kind: I32,
                                    },
                                ),
                            },
                        ),
                    },
                },
            ),
            location: <internal>:19:29,
        },
        11743562013128004906: Statement {
            id: 11743562013128004906,
            kind: If(
                If {
                    id: 11743562013128004906,
                    cases: [],
                    location: <internal>:30:43,
                },
            ),
            location: <internal>:30:43,
        },
    },
    expressions: {
        5871781006564002453: Expression {
            id: 5871781006564002453,
            location: <internal>:27:28,
            kind: Literal(
                Literal {
                    id: 5871781006564002453,
                    location: <internal>:27:28,
                    kind: Int(
                        IntLiteral {
                            id: 5871781006564002453,
                            value: 0,
                            kind: I32,
                        },
                    ),
                },
            ),
        },
    },
}
